--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,29 @@ section {
   margin: 3em;
 }
 
+/* Fade in on page load animation
+Courtesy of: https://codepen.io/jmelgoza/pen/jEaGYg */
+
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+h1 {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:5s;
+}
+
 /* Divider Line */
 section:not(.footer)::after {
   display: block;
@@ -87,6 +110,7 @@ blockquote::before, blockquote::after {
 .why ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2em;
 }
 
 .why img {
