--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body {
     margin-top: 6em;
-    background-color: #1C3150;
-    color: #F2CD60;
 }
 
 section {
@@ -12,8 +10,6 @@ ul {
     padding-inline-start: 0px;
 
 }
-
-
 
 h1, h2, h3 {
     font-family: 'Amatic SC', cursive;
@@ -32,6 +28,11 @@ h3 {
     font-size: 2em;
 }
 
+.dark-background {
+    background-color: #1C3150;
+    color: #F2CD60;
+}
+
 p {
     font-family: monospace;
     font-size:14px;
@@ -41,11 +42,6 @@ p {
     content:"⭐";
 }
 .parallax { 
-    background-image:     
-        linear-gradient(
-        rgba(0, 0, 0, 0.4), 
-        rgba(0, 0, 0, 0.4)
-      ),url("star-background.jpg");
     height: 500px; 
     background-attachment: fixed;
     background-position: center;
@@ -53,12 +49,22 @@ p {
     background-size: cover;
   }
 
+.flex-column-horizontally-centered {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+}
 
-
+.flex-row-vertically-centered {
+    display:flex;
+    justify-content:space-around;
+    flex-flow:row wrap;
+    align-content: center;
+}
 /* NAVIGATION */
 
 nav {
-    background-color: #1C3150;
     position: fixed; 
     top: 0; 
     z-index: +1 ;
@@ -95,31 +101,34 @@ nav .startrly-name:before, #splash .startrly-name:before{
     content:"🌟"
 }
 
-#startrly-logo, #try, #about {
-    text-align: center;
-}
-
-
-
 /* SPLASH */
 #splash {
     height:70vh;
     min-height:450px;
     padding: 2em 0;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-content: center;
+
+    background-image:     
+    linear-gradient(
+    rgba(0, 0, 0, 0.4), 
+    rgba(0, 0, 0, 0.4)
+  ),url("star-background.jpg");
+
     color: #F6F09B;
     text-shadow: 4px 4px 4px #000000;
     font-family: 'Amatic SC', cursive;
-    animation: fade-in 2s;
+    
 }
 
 #splash h1  {
     font-size: 5em;
     margin: .5em;
+    animation: fade-in 2s;
 }
+
+@keyframes fade-in {
+    from  { opacity: 0; }
+    to { opacity: 1; }
+  }
 
 #splash sub  {
     font-size: 2em;
@@ -129,17 +138,23 @@ nav .startrly-name:before, #splash .startrly-name:before{
 
 #splash a {
     display:block;
+
+    /*font things */
     text-decoration:none;
     text-shadow: none;
+    font-size: 2em;
+    color: #1C3150;
+
+    /*block things */
     padding: 1em;
     width:200px;
     margin: 3em auto;
     border: 2px solid;
-    background-color: #F2CD60;
+    background: radial-gradient( #F2CD60, #9198e5);
     box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
     border-radius: 40%;
-    font-size: 2em;
-    color: #1C3150;
+    
+
 }
 
 #splash a:hover {
@@ -151,21 +166,20 @@ nav .startrly-name:before, #splash .startrly-name:before{
 .quote {
     padding: 1em 1em;
     max-height:12em;
-    text-align:center;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
     box-shadow: 1px 2px 4px 4px rgba(0, 0, 0, .5);
     background-color: #F6F09B;
     color: #1C3144;
+
+    text-align:center;
     font-family: 'Amatic SC', cursive;
     font-size:2em;
 }
+
 .quote p {
     align-self:flex-end;
     padding: 0 4em;
 }
+
 .quote p:before {
     content: "-- "
 }
@@ -177,14 +191,7 @@ blockquote:before, blockquote:after {
 /* WHY */
 
 #why {
-    max-height:30rem;
-}
-
-#why ul {
-    display:flex;
-    justify-content:space-around;
-    flex-flow:row wrap;
-    
+    max-height:30em;
 }
 
 #why li {
@@ -196,8 +203,8 @@ blockquote:before, blockquote:after {
 #why img {
     grid-row:1/5;
     grid-column:1/3;
-    margin-left:1rem;
-    margin-right:1rem;
+    margin-left:1em;
+    margin-right:1em;
 }
 
 #why strong {
@@ -242,16 +249,9 @@ blockquote:before, blockquote:after {
 /* SPONSORS */
 
 #sponsors ul {
-    display: -webkit-flex;
-    display:flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-content: center;
     max-width:1200px;
     margin:auto;
-
 }
-
 
 #sponsors img {
     margin: 20% .2em;
@@ -264,10 +264,7 @@ blockquote:before, blockquote:after {
     background-color:  #F2CD60;
     color: #1C3150;
     padding: 1em 1em;
-    display:flex;
-    flex-flow:row wrap;
     justify-content: flex-start;
-    align-content: center;
 }
 
 .footer-links {
@@ -279,7 +276,6 @@ blockquote:before, blockquote:after {
 .footer-links li:hover{
     color:white;
 }
-
 
 /* For mobile */
 @media only screen and (max-width: 600px) {
