--- a/styles.css
+++ b/styles.css
@@ -111,22 +111,60 @@ blockquote + p::before {
     margin-right: 10px;
 }
 
-#team ul {
+#team {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+}
+
+#team ul {
+    max-width: 800px;
+    display: grid;
+    grid-template: 250px 250px / 1fr 1fr 1fr 1fr 1fr;
+    /* align-items: center;
+  justify-content: center; */
+}
+
+#team li {
+    /* background-color: grey; */
+    display: flex;
+    flex-direction: column;
+} 
+
+#team li img {
+    border-radius: 100px;
+}
+
+#team li:nth-child(1) {
+    grid-column-start: 1;
+}
+
+#team li:nth-child(2) {
+    grid-column-start: 3;
+}
+
+#team li:nth-child(3) {
+    grid-column-start: 5;
+}
+
+#team li:nth-child(4) {
+    grid-column-start: 2;
+    grid-row-start: 2;
+}
+
+#team li:nth-child(5) {
+    grid-column-start: 4;
+    grid-row-start: 2;
 }
 
 #team span {
     text-align: center;
+    line-height: 2em;
     display: block;
 }
 
 section:not(#team) {
    border-bottom: 2px solid grey;
-}
-
-#team img {
-    border-radius: 75px;
 }
 
 
