--- a/styles/style.css
+++ b/styles/style.css
@@ -118,4 +118,21 @@ blockquote + p::before {
   margin: 10px;
 }
 
+.team_profiles {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile_photos {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.profile_photos > li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
