--- a/styles/style.css
+++ b/styles/style.css
@@ -170,8 +170,14 @@ h2{
   flex-direction: row;
   flex-wrap: wrap;
   list-style-type: none;
-  justify-content:flex-start;
+  justify-content:space-around;
   margin: 40px;
-  padding-left: 0em;
+  padding-left: 30px;
 }
+
+.footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 
