--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,23 @@ list-style-type: none;
   margin-bottom: 1em;
 }
 
+/* Sponsor box format */
+.sponsor_box {
+  align-content: space-between;
+  border-bottom: 1px;
+  border-bottom-style: solid;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding-left: 35px;
+  padding-bottom: 90px
+}
+
+.sponsor {
+  list-style-type: none;
+  margin-right: 40px;
+  margin-bottom: 20px;
+}
 
 
 
