--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     border: solid black 2px;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 h1 {
@@ -18,20 +18,20 @@ nav ul li:hover {
 }
 
 nav {
-    background-color: aquamarine;
     flex-wrap: wrap;
 }
 
-section {
+#first-border {
+    border-top: 2px solid grey;
+}
+
+.border {
     border-bottom: 2px solid grey;
 }
 
 .navigation {
-    border: 1px solid grey;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* font-family: 'Tangerine', cursive; */
-    /* font-size: 20px; */
     font-weight: bold;
     flex-wrap: wrap;
 }
@@ -41,7 +41,6 @@ nav ul li:nth-child(2) {
 }
 
 #main {
-    background-color: rgb(183, 133, 212);
     flex-wrap: wrap;
 }
 
@@ -64,10 +63,25 @@ nav ul li:nth-child(2) {
 }
 
 .quote {
-    display: flex;
+    /* display: flex; */
     text-align: center;
     font-style: italic;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    /* border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey; */
+    margin-bottom: 3em;
+}
+
+.quote>blockquote {
+    font-style: italic;
+    padding: 5em 20em 1em 20em;
+    font-size: 1em;
+}
+
+.quote>p {
+    font-style: italic;
+    text-align: right;
+    padding-right: 20em;
 }
 
 .from {
@@ -76,23 +90,29 @@ nav ul li:nth-child(2) {
     padding-right: 250px;
 }
 
-.blockquotes {
-    background-color: cornflowerblue;
-    flex-wrap: wrap;
-}
-
 .heading {
     padding-top: 50px;
     text-align: center;
 }
 
-.why-images {
+.why {
     display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-around;
+    align-items: flex-start;
+    overflow: visible;
 }
 
-.text {
-    display: flex;
+.why>li>img {
+    float: left;
+    margin: 4px;
+}
+
+.why>li>p {
+    margin-top: 0;
     flex-wrap: wrap;
+    width: 278px;
 }
 
 .circle {
@@ -101,13 +121,19 @@ nav ul li:nth-child(2) {
 
 .first-three {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .last-two {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.name-title {
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
 }
 
@@ -117,7 +143,12 @@ nav ul li:nth-child(2) {
     flex-wrap: wrap;
 }
 
-.support {
-    display: flex;
-    justify-content: space-evenly;
+.footer {
+    border-top: 1px solid lightgrey;
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+
+.footer>.support {
+    padding-left: 10em;
 }
