--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,8 +7,12 @@ h1, h2, h3, strong {
 	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 }
 
+a {
+  color: #426642;
+}
+
 a:hover {
-  color: grey;
+  color: white;
 }
 
 .intro, .team, h1, h2 {
@@ -19,8 +23,8 @@ ul {
   list-style: none;
 }
 
-section {
-  margin: 3em;
+section:not(.intro) {
+  padding: 3em;
 }
 
 /* Fade in on page load animation
@@ -32,25 +36,27 @@ Courtesy of: https://codepen.io/jmelgoza/pen/jEaGYg */
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 h1 {
-  opacity:0;  /* make things invisible upon start */
-  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+  font-size: 3em;
+  margin-top: 3em;
+  opacity: 0;  /* make things invisible upon start */
+  -webkit-animation: fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+  -webkit-animation-fill-mode: forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:5s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 3s;
 }
 
 /* Divider Line */
-section:not(.footer)::after {
+.quote::after, .sponsors::after {
   display: block;
   content: "";
-  border-top: 1px dashed grey;
+  border-top: 1px dashed #426642;
   margin-top: 2em;
 }
 
@@ -60,7 +66,7 @@ nav {
   top: 0;
   width: 100%;
   background-color: black;
-  color: white;
+  color: whitesmoke;
 }
 
 nav ul {
@@ -71,8 +77,18 @@ nav ul {
 
 /* Intro Section */
 .intro {
+  display: flex
   background-color: lightgrey;
   padding: 2em;
+  /* Parallax Effect */
+  background-image: url("https://cdn.pixabay.com/photo/2016/09/30/03/39/pineapple-1704339_1280.jpg");
+  /* Set a specific height */
+  height: 500px; 
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 sub {
@@ -82,7 +98,7 @@ sub {
 
 .intro [href] {
   width: 25%;
-  border: .25em solid gray;
+  border: .25em solid #426642;
   border-radius: 5px;
   align: center;
   padding: .5em;
@@ -107,6 +123,17 @@ blockquote::before, blockquote::after {
 }
 
 /* Why Section */
+.why {
+  /* Parallax Effect */
+  background-image: url("https://cdn.pixabay.com/photo/2016/11/22/23/15/abstract-1851115_1280.jpg");
+  /* Set a specific height */
+  height: 300px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .why ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -119,6 +146,18 @@ blockquote::before, blockquote::after {
 }
 
 /* Team Section */
+.team {
+  color: white;
+  /* Parallax Effect */
+  background-image: url("https://cdn.pixabay.com/photo/2017/07/25/14/54/rain-2538429_1280.jpg");
+  /* Set a specific height */
+  height: 700px; 
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .team ul {
   display: flex;
   flex-flow: row wrap;
