--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,31 @@ body, a {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(68, 64, 64);
     text-decoration: none;
+    background-color: rgb(213, 244, 252);
 }
 
-a:hover {
-    background-color: grey;
-    color: white;
+#intro a:hover {
+    background-color: rgb(23, 1, 32);
+    color: rgb(237, 199, 252);
+}
+
+h1 {
+    font-size: 5em;
 }
 
 h1, h2 {
+    font-family: 'Fredoka One', cursive;
     text-align: center;
     color: rgb(23, 1, 32);
     padding: 0px;
 }
 
 sub {
+    font-family: 'Fredoka One', cursive;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 2em;
     display:block;
-    padding: 35px;
+    padding-bottom: 7em;
 }
 
 li {
@@ -29,7 +36,9 @@ li {
 nav {
     display: block;
     height: 3em;
-    background-color: rgb(254, 251, 220);
+    background-color: rgb(21, 26, 46);
+    color: white;
+    font-family: 'Fredoka One', cursive;
 }
 
 nav ul {
@@ -45,7 +54,7 @@ nav li {
 }
 
 nav li:hover {
-    color: rgb(23, 1, 32);
+    color: rgb(237, 199, 252);
 }
 
 blockquote {
@@ -112,27 +121,23 @@ blockquote + p::before {
 }
 
 #team {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+    text-align: center;
 }
 
 #team ul {
-    max-width: 800px;
-    display: grid;
-    grid-template: 250px 250px / 1fr 1fr 1fr 1fr 1fr;
-    /* align-items: center;
-  justify-content: center; */
+    width: 80%;
+    margin: 0px;
+    padding: 0px;
+    display: inline-grid;
+    grid-template: 250px 250px / 20% 20% 20% 20% 20%;
 }
-
-#team li {
-    /* background-color: grey; */
-    display: flex;
-    flex-direction: column;
-} 
 
 #team li img {
     border-radius: 100px;
+}
+
+#team li img:hover {
+    box-shadow: 0px 0px 3px 3px rgb(23, 1, 32);;
 }
 
 #team li:nth-child(1) {
@@ -167,6 +172,18 @@ section:not(#team) {
    border-bottom: 2px solid grey;
 }
 
+#sponsors ul {
+    margin: 0px;
+    padding: 4em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+#sponsors li {
+    margin: 5px;
+}
 
 
 #footer div {
