--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ html {
 
 .site-container {
   display: grid;
-  grid-template-rows: 0.25fr .6fr .7fr .5fr .7fr 1.25fr .75fr 0.3fr;
+  grid-template-rows: 0.25fr .6fr .7fr .5fr .7fr 1.25fr .75fr 0.5fr;
 }
 
 li {
@@ -59,7 +59,7 @@ nav ul li {
   font-size: .9em;
 }
 
-section:not(#sponsors):before {
+section:not(#sponsors):before, footer:before {
   content: " ";
   display: block;
   border-bottom: 2px solid darkgray;
@@ -152,3 +152,18 @@ blockquote:after {
 #sponsors li {
   margin: 0 1%;
 }
+
+#footer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#footer-container div {
+  margin: 2% 8%;
+}
+
+#footer-container ul {
+  margin: 0; 
+  padding: 0;
+}
+
