--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 /* top nav */
 nav ul {
+    margin-top: 2.5em;
     display: flex;
     list-style-type: none;
     font-weight: bold; 
+    font-size: 1.5em;
+    /* flex: 1; */
 }
 
 #startrly {
@@ -10,7 +13,7 @@ nav ul {
 }
 
 #trynow {
-    margin-left: 25em;
+    margin-left: 20em;
 }
 
 #about {
@@ -18,6 +21,52 @@ nav ul {
     margin-right: 4em;
 }
 
+/* brand */
+.brand {
+    display:flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    display: grid;
+    grid-template-rows: 70% 5% 15%;
+    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-areas:
+        ". n ."
+        ". t ."
+        ". b .";
+}
+
+#companyname {
+    grid-area: n;
+    font-size: 4em;
+    margin-top: 1em;
+}
+
+#tagline {
+    grid-area: b;
+    font-weight: bold;
+    font-size: 2.5em;
+    position: static; 
+    line-height: normal;
+    padding-bottom: 7em;
+}
+
+.button {
+    background-color:turquoise;
+    border-radius: 10px;
+    color: black;
+    padding: 20px;
+    text-decoration: none;
+    grid-area: b;
+    font-size: 2.25em;
+    width: 300px;
+
+}
+
+.button:hover {
+    background-color:  black;
+    color: turquoise;
+}
 
 /* quote sections */
 .quote {
@@ -47,6 +96,5 @@ blockquote::before, blockquote::after {
     margin-left: auto;
     margin-right: 4em;
 }
-
 
 
