--- a/styles/style.css
+++ b/styles/style.css
@@ -146,9 +146,17 @@ nav ul li:nth-child(2) {
 .footer {
     border-top: 1px solid lightgrey;
     display: grid;
+    flex-direction: column;
     grid-template-columns: 30% 70%;
 }
 
 .footer>.support {
     padding-left: 10em;
 }
+
+
+/* .footer>.support ul {
+    align-content: left;
+    display: flex;
+    flex-direction: column;
+} */
