--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-size: 1.25em;
 }
 
@@ -17,22 +19,20 @@ section h2 {
 }
 
 nav ul {
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
+  grid-template-columns: 60% 20% 20%;
 }
 
 nav ul li {
   font-weight: bold;
 }
 
-.left {
-  margin-right: auto;
+.nav-left {
   margin-left: 5%;
 }
 
 .nav-right {
-  margin-right: 7.5%;
-  margin-left: 7.5%;
+  margin: 0 7.5%;
 }
 
 #site-intro {
@@ -42,6 +42,7 @@ nav ul li {
   font-weight: bold;
   justify-content: flex-start;
   font-size: 1.5em;
+  text-transform: capitalize
 }
 
 #site-intro sub {
