--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+/* Whole page */
+
 html {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-size: 1.25em;
@@ -18,6 +20,23 @@ section h2 {
   text-align: center;
 }
 
+#site-intro, .quote, #why ul, #team ul, .team-member, #sponsors ul, #footer-container {
+  display: flex;
+}
+
+#site-intro, .quote, .team-member {
+  flex-direction: column;
+}
+
+section:not(#sponsors):before, footer:before {
+  content: " ";
+  display: block;
+  border-bottom: 2px solid darkgray;
+  margin: 0 10px 0 10px;
+}
+
+/* Nav bar */
+
 nav ul {
   display: grid;
   grid-template-columns: 60% 20% 20%;
@@ -35,9 +54,9 @@ nav ul li {
   margin: 0 7.5%;
 }
 
+/* Site intro */
+
 #site-intro {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   font-weight: bold;
   justify-content: flex-start;
@@ -65,16 +84,9 @@ nav ul li {
   background-color: #347096;
 }
 
-section:not(#sponsors):before, footer:before {
-  content: " ";
-  display: block;
-  border-bottom: 2px solid darkgray;
-  margin: 0 10px 0 10px;
-}
+/* Quote sections */
 
 .quote {
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
   font-style: italic;
   font-size: 1.2em;
@@ -101,12 +113,13 @@ blockquote:after {
   content: "--"
 }
 
+/* Why section */
+
 #why h2 {
   padding: 2.5% 0;
 }
 
 #why ul {
-  display: flex;
   justify-content: space-evenly;
 }
 
@@ -120,19 +133,15 @@ blockquote:after {
   vertical-align: top;
 } 
 
+/* Team section */
+
 #team ul {
-  display: flex;
   flex-flow: row wrap;
   justify-content: center;
 }
 
 #team li {
   margin: 3% 7.5%;
-}
-
-.team-member {
-  display: flex;
-  flex-direction: column; 
 }
 
 .team-member img {
@@ -148,8 +157,9 @@ blockquote:after {
   text-align: center;
 }
 
+/* Sponsors section */
+
 #sponsors ul {
-  display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -159,8 +169,9 @@ blockquote:after {
   margin: 0 1%;
 }
 
+/* Footer */
+
 #footer-container {
-  display: flex;
   flex-wrap: wrap;
 }
 
