--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,12 @@
 body {
-  margin: 40px;
-  font-family: 'Oswald', sans-serif;
-}
-.main-container {
-  display: grid;
-  width: 80%;
-  height: auto;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(8, auto);
-}
-
-.quote {
-  display: flex;
-  flex-direction: row;
-  font-style: italic;
-}
-
-.quote p {
-  margin-top: 10vh;
+  margin: 0px;
+  font-family: 'Merriweather', serif;
+  /* font-size: 100% */
 }
 
 nav ul {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-}
-
-nav ul li {
-  font-size: 1rem;
-}
-
-nav ul li:nth-child(2) {
-  grid-column: 7;
+  grid-template-columns: 70% 15% 15%;
 }
 
 .welcome {
@@ -38,12 +14,32 @@ nav ul li:nth-child(2) {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  margin: 10px
 }
 
-.welcome h1 {
+.welcome h1, sub {
   font-size: 3em;
-  margin: 0px
+  padding: 5px
+}
+
+.button {
+  display: flex;
+  font-size: 1em;
+  height: 5vh;
+  text-decoration: none;
+  color: #333;
+  align-items: center;
+  justify-content: center;
+  margin 5% 5% 5% 5% 
+}
+
+.welcome div {
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+button:hover {
+  color: grey
 }
 
 .quote {
@@ -52,9 +48,27 @@ nav ul li:nth-child(2) {
   border-bottom: 1px solid #333;
 }
 
+.quote {
+  display: flex;
+  flex-direction: column;
+  font-style: italic;
+}
+
+.quote p {
+  align-self: flex-end;
+  margin-right: 5%
+}
+
+blockquote {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 sub {
 font-size: 1em;
+margin-bottom: 5vh;
 }
+
 .why-startrly h2{
   text-align: center;
 }
@@ -66,7 +80,6 @@ font-size: 1em;
 
 .why-startrly li {
   padding: 1em;
-  width: 100%
 }
 
 .why-startrly img {
@@ -80,70 +93,51 @@ font-size: 1em;
 }
 
 .meet-team ul {
-  display: grid;
-  grid-template: 1fr 1fr / repeat(5 1fr);
-  grid-gap: 1rem;
+  width: 70%;
+  margin: auto;
 }
 
-.a {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  align-self: center;
-}
-
-.b {
-  grid-column-start: 3;
-  grid-column-end: 4;
-}
-
-.c {
-  grid-row-start: 1;
-  grid-column-start: 5;
-  grid-column-end: 6;
-}
-
-.d {
-  grid-row-start: 2;
-  grid-column-start: 2;
-  grid-column-end: 3
-}
-
-.e {
-  grid-row-start: 2;
-  grid-column-start: 4;
-  grid-column-end: 5;
-
+.first-three, .last-two {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 }
 
 span {
   display: block;
   text-align: center;
 }
+
 .meet-team img {
   border-radius: 50%
 }
 
-
+.sponsors h2 {
+  margin-top: 10vh;
+  text-align: center;
+}
 .sponsors ul {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
-  align-content: center
+  justify-content: center;
 }
 
-ul {
-  list-style-position: inside;
+.sponsors li {
+  margin: 0.5em;
 }
 
 li {
   list-style: none;
-  clear: left;
 }
 
-.support {
+.footer {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: left;
 }
 
+.footer div {
+  padding: 0 10em 0 2em
+}
 
+.footer ul {
+  padding-left: 0%
+}
