--- a/styles/style.css
+++ b/styles/style.css
@@ -2,56 +2,56 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
-    border: 2px solid blue;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
     display: grid;
-    grid-template-columns: 70% 15% 15%;
-}
-nav {
+    grid-template-columns: 60% 20% 20%;
+    font-weight: bold;
 }
 
 nav li {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 5rem;
+    padding-right: 5rem;
 } 
 
-#hero {
+#intro {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#hero h1 {
-    margin-top: 50px;
+#intro h1 {
+    margin-top: 5rem;
 }
-#hero sub {
-    margin-top: 50px;
+#intro sub {
+    margin-top: 2rem;
     font-size: 150%;
     position: static;
     line-height: normal;
     font-weight: bold;
 }
 
-#hero a { 
-    margin-top: 50px;
-    margin-bottom: 75px;
+#intro a { 
+    margin-top: 5rem;
+    margin-bottom: 6rem;
     font-size: 125%;
     text-decoration: none;
     border: 2px solid lightgrey;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
     color: black;
 }
 
 .quote {
-    border-top: 2px solid lightgrey;
-    border-bottom: 2px solid lightgrey;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    font-family: 'Times New Roman', Times, serif;
     font-style: italic;  
     align-items: center;  
+    font-size: 110%;
 } 
 
 .quote blockquote {
@@ -92,29 +92,29 @@ nav li {
 
 .why h2 {
     text-align: center;
+    padding: 2rem;
 }
 
 .why li {
     list-style-type: none;
     padding: 0;
-    max-width: 300px;
+    max-width: 25rem;
+    font-size: 90%;
 }
 
 .why ul li img {
     float: left;
 }
 
-.why li strong {
-    
-}
 
 .team {
     justify-content: center;
-    margin: 100px;
+    margin: 8rem;
 }
 
 .team h2 {
     text-align: center;
+    margin-bottom: 5rem;
 }
 
 .team ul {
@@ -126,30 +126,41 @@ nav li {
 .team ul li {
     display: flex; 
     flex-direction: column;
-    margin: 25px 75px;
+    margin: 2rem 5rem;
     text-align: center;
     line-height: 175%;
 }
 
 .team ul li img {
     border-radius: 50%;
-    border: 3px solid lightgrey;
+    border: double 3px lightgrey;
+
+    
 }
 
-.sponsors {
-    background-color: lightgrey;
+.sponsors h2 {
+    padding-bottom: 3rem;
+    text-align: center;
 }
-
-section:last-child {
+.sponsors ul {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
 }
 
-section:last-child .support {
-    /* width: 25%; */
-} 
-    
-section:last-child .about {
-    /* width: 25%; */
-    
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    border-top: 2px solid lightgrey;
+}
+
+.footer ul, .footer h3 {
+    list-style-type: none;
+    padding: 0;
+    margin-left: 5rem;
+    margin-right: 6rem;
 }
